deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nba-boot-app
  namespace: nba-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nba-boot-app
  template:
    metadata:
      labels:
        app: nba-boot-app
    spec:
      containers:
      - name: nba-boot-app
        image: m4t34/nba-players:latest
        ports:
        - containerPort: 8080
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 40
          timeoutSeconds: 15
          periodSeconds: 13
          failureThreshold: 4
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 40
          timeoutSeconds: 15
          periodSeconds: 13
          failureThreshold: 4
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
